NCL-952   - Fix issue where notifications disappear behind sidebar   - Fix issue where notifications can be scrolled off screen   - Increased timeout for notifications to 15secs

--- a/ui/app/styles/app.css
+++ b/ui/app/styles/app.css
@@ -16,10 +16,11 @@
  * limitations under the License.
  */
  .notification-area {
-   position: absolute;
+   position: fixed;
    top: 1rem;
    right: 1rem;
    width: 30rem;
+   z-index:9000;
  }
  html {
   position: relative;
